<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_home"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.discoverpic.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_addpost"
        android:name="com.example.discoverpic.ui.addPost.AddPostFragment"
        android:label="@string/title_Camera"
        tools:layout="@layout/fragment_addpost">
        <argument
            android:name="country"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="description"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="imgUrl"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="city"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="postId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.discoverpic.ui.profile.ProfileFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_addpost"
            app:destination="@id/navigation_addpost" />
    </fragment>

</navigation>